--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -885,8 +885,8 @@ BEGIN
         END
         POPUP "&Filters"
         BEGIN
-            MENUITEM "Noise Reduction (Temporal)\tN", IDM_NOISE_FILTER
-            MENUITEM "&Gamma",                      IDM_GAMMA_FILTER
+            MENUITEM "Filters",                     ID_SETTINGS_FILTERS_FILTERS
+            , INACTIVE
         END
     END
     POPUP "&Hardware"
