--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -454,7 +454,7 @@ END
 ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "dTV Version 2.x",IDC_VERSION,0,3,293,9
@@ -481,8 +481,8 @@ BEGIN
                     IDC_STATIC,200,47,166,18
     LTEXT           "John Adcock\nMark Rejhon\nSteve Grimm\nTom Barry\nMichael Eskin\nMichael Samblanet\nLaurent Garnier\nHermes Conrad",
                     IDC_STATIC,12,52,86,77
-    LTEXT           "Please read the FAQ and the appropriate release thread for the version your using before posting here",
-                    IDC_STATIC,200,104,166,20
+    LTEXT           "Please read the FAQ and the appropriate release thread for the version you are using before posting",
+                    IDC_STATIC,200,104,166,26
     CTEXT           "http://www.avsforum.com/",IDC_LINK,201,78,162,12,
                     SS_CENTERIMAGE | SS_SUNKEN
 END
