--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -454,7 +454,7 @@ END
 ABOUT DIALOGEX 22, 17, 374, 274
 STYLE DS_MODALFRAME | WS_CAPTION | WS_SYSMENU
 CAPTION "About dTV"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,305,9,58,19,WS_GROUP,WS_EX_CLIENTEDGE
     CTEXT           "dTV Version 2.x",IDC_VERSION,0,3,293,9
@@ -757,6 +757,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "&Pause\tP",                   IDM_CAPTURE_PAUSE
         MENUITEM "Take Sti&ll Picture\tL",      IDM_TAKESTILL
+        MENUITEM "Take Stream Snapshot\tShift+L", IDM_TAKESTREAMSNAP
         MENUITEM SEPARATOR
         MENUITEM "Show &OSD\tEnter",            IDM_SHOW_OSD
         MENUITEM "&Hide OSD\tBackspace",        IDM_HIDE_OSD
@@ -1224,6 +1225,7 @@ BEGIN
     "K",            IDM_KONTRAST_CURRENT,   VIRTKEY, SHIFT, CONTROL, 
                                                     NOINVERT
     "L",            IDM_TAKESTILL,          VIRTKEY, NOINVERT
+    "L",            IDM_TAKESTREAMSNAP,     VIRTKEY, SHIFT, NOINVERT
     "M",            IDM_MUTE,               VIRTKEY, NOINVERT
     "M",            IDM_MUTE,               VIRTKEY, SHIFT, NOINVERT
     "N",            IDM_NOISE_FILTER,       VIRTKEY, NOINVERT
