--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -754,14 +754,17 @@ BEGIN
         MENUITEM "Au&tohide Cursor",            IDM_AUTOHIDE_CURSOR
         MENUITEM "&Full Screen\tAlt+Enter",     IDM_FULL_SCREEN
         MENUITEM "&Always on Top",              IDM_ON_TOP
+        POPUP "&OSD"
+        BEGIN
+            MENUITEM "&Show\tEnter",                IDM_SHOW_OSD
+            MENUITEM "&Hide\tBackspace",            IDM_HIDE_OSD
+            MENUITEM "&Autohide",                   IDM_AUTOHIDE_OSD
+            , CHECKED
+        END
         MENUITEM SEPARATOR
         MENUITEM "&Pause\tP",                   IDM_CAPTURE_PAUSE
         MENUITEM "Take Sti&ll Picture\tL",      IDM_TAKESTILL
         MENUITEM "Take Stream Snapshot\tShift+L", IDM_TAKESTREAMSNAP
-        MENUITEM SEPARATOR
-        MENUITEM "Show &OSD\tEnter",            IDM_SHOW_OSD
-        MENUITEM "&Hide OSD\tBackspace",        IDM_HIDE_OSD
-        MENUITEM "A&utohide OSD",               IDM_AUTOHIDE_OSD, CHECKED
     END
     POPUP "&AspectRatio"
     BEGIN
@@ -1005,6 +1008,24 @@ BEGIN
         MENUITEM "&Licence ...",                IDM_HELP_GPL
         MENUITEM SEPARATOR
         MENUITEM "&About dTV...",               IDM_ABOUT
+    END
+END
+
+CONTEXTMENU MENU DISCARDABLE 
+BEGIN
+    POPUP "Menu1"
+    BEGIN
+        MENUITEM "Video &Input",                65535
+        MENUITEM "&Audio Input",                65535
+        MENUITEM "Video &Format",               65535
+        MENUITEM "&Channels",                   65535
+        MENUITEM "Deinterlace &Mode",           65535
+        MENUITEM "Aspect &Ratio",               65535
+        MENUITEM "Fi&lters",                    65535
+        MENUITEM "&Datacasting",                65535
+        MENUITEM "Show &OSD",                   IDM_SHOW_OSD
+        MENUITEM "Full &Screen",                IDM_FULL_SCREEN
+        MENUITEM "E&xit",                       IDM_END
     END
 END
 
