1) Attempt at fixing issue with half-height mode aspect adjustment (even only et al) -- UNTESTED (no access to capture card here)
2) Expieremental Invert-X and Invert-Y axis implementation based on inverting source rectangle -- UNTESTED (no access to capture card here)

--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -845,6 +845,8 @@ BEGIN
             MENUITEM "3.5x",                        IDM_ZOOM_35
             MENUITEM "4x",                          IDM_ZOOM_40
         END
+        MENUITEM "X-Axis Inversion (Expieremental)", IDM_XINVERT
+        MENUITEM "Y-Axis Inversion (Expieremental)", IDM_YINVERT
     END
     POPUP "&Settings"
     BEGIN
