--- a/dTV/dTV/dTV.RC
+++ b/dTV/dTV/dTV.RC
@@ -90,13 +90,13 @@ BEGIN
 END
 
 SPLASHBOX DIALOGEX 0, 0, 145, 192
-STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | DS_CENTER | 
-    WS_POPUP | WS_VISIBLE | WS_BORDER
+STYLE DS_SYSMODAL | DS_NOIDLEMSG | DS_SETFOREGROUND | DS_3DLOOK | WS_POPUP | 
+    WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "System", 0, 0, 0x1
+FONT 8, "System"
 BEGIN
-    CONTROL         "STARTUP",IDC_STATIC,"Static",SS_BITMAP,0,0,11,11
-    LISTBOX         IDC_LIST1,38,140,66,47,NOT LBS_NOTIFY | 
+    CONTROL         "STARTUP",IDC_P1,"Static",SS_BITMAP,0,0,11,11
+    LISTBOX         IDC_LIST1,38,140,66,48,NOT LBS_NOTIFY | 
                     LBS_NOINTEGRALHEIGHT | NOT WS_BORDER | WS_TABSTOP
 END
 
